# rk3568_all_app_demo

./: CMakeLists.txt  build_all_demo.sh  nfs_transfer.sh  readme.md
camera_app_demo/: camera_app.c
lcd_app_demo/: lcd_drm_app.c  lcd_fb_app.c
third_package/libdrm-2.4.100/: Makefile  config.h  config.status  libdrm.la  libdrm.pc  libdrm_la-xf86drm.lo  libdrm_la-xf86drmHash.lo  libdrm_la-xf86drmMode.lo  libdrm_la-xf86drmRandom.lo  libdrm_la-xf86drmSL.lo  libtool
third_package/libdrm-2.4.100/.deps/: libdrm_la-xf86drm.Plo  libdrm_la-xf86drmHash.Plo  libdrm_la-xf86drmMode.Plo  libdrm_la-xf86drmRandom.Plo  libdrm_la-xf86drmSL.Plo
third_package/libdrm-2.4.100/.libs/: libdrm.lai  libdrm.so.2.4.0
third_package/libdrm-2.4.100/amdgpu/: Makefile  amdgpu_asic_id.lo  amdgpu_bo.lo  amdgpu_cs.lo  amdgpu_device.lo  amdgpu_gpu_info.lo  amdgpu_vamgr.lo  amdgpu_vm.lo  handle_table.lo  libdrm_amdgpu.la
third_package/libdrm-2.4.100/data/: Makefile
third_package/libdrm-2.4.100/etnaviv/: Makefile  libdrm_etnaviv.pc
third_package/libdrm-2.4.100/exynos/: Makefile  libdrm_exynos.pc
third_package/libdrm-2.4.100/freedreno/: Makefile  freedreno_bo.lo  freedreno_bo_cache.lo  freedreno_device.lo  freedreno_pipe.lo  freedreno_ringbuffer.lo  libdrm_freedreno.la
third_package/libdrm-2.4.100/intel/: Makefile  libdrm_intel.pc
third_package/libdrm-2.4.100/libkms/: Makefile  api.lo  dumb.lo  libkms.la  linux.lo  nouveau.lo  radeon.lo  vmwgfx.lo
third_package/libdrm-2.4.100/man/: Makefile
third_package/libdrm-2.4.100/nouveau/: Makefile  abi16.lo  bufctx.lo  libdrm_nouveau.la  pushbuf.lo  (+1 more)
(+121 files in other folders)
